// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`priceContract high tier (score >= 800), 24x/3x base multipliers 1`] = `
{
  "availableGuaranteeCents": 2400000,
  "feeCents": 7500,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 100000,
}
`;

exports[`priceContract medium tier (600-799), 36x/5x mid multipliers, with condo 1`] = `
{
  "availableGuaranteeCents": 7200000,
  "feeCents": 21420,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 215000,
}
`;

exports[`priceContract low tier (< 600), 48x/7x max multipliers 1`] = `
{
  "availableGuaranteeCents": 14400000,
  "feeCents": 43313,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 330000,
}
`;

exports[`priceContract boundary at 800 picks high tier 1`] = `
{
  "availableGuaranteeCents": 3600000,
  "feeCents": 11250,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 150000,
}
`;

exports[`priceContract boundary at 600 picks medium tier 1`] = `
{
  "availableGuaranteeCents": 3600000,
  "feeCents": 15000,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 150000,
}
`;
